--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
 
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-light displayAdjustment">
         <a class="navbar-brand" href="#"><img class="logoImg" src="img/palavraChaveLogo.png" width="23%" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -79,10 +79,35 @@
 
       </nav>
 
+      <!-- <nav class="navbar navbar-expand-lg navbar-dark">
+
+        <a class="navbar-brand" href="">tindog</a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#footer">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#pricing">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#cta">Download</a>
+            </li>
+          </ul>
+
+        </div>
+      </nav> -->
+
 
       <div class="row">
         <div class="col-lg-6 col-md-12">
-          <img class="title-image" src="img/natOficial.png" alt="">
+          <img class="title-image" src="/img/NewImgHeader.png" alt="Natalia.img">
         </div>
 
         <div class="col-lg-6 col-md-12 editTop">
