--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
       <div class="row">
         <div class="col-lg-6 col-md-12">
-          <img class="title-image" src="/img/NewImgHeader.png" alt="Natalia.img">
+          <img class="title-image" src="img/NewImgHeader.png" alt="Natalia.img">
         </div>
 
         <div class="col-lg-6 col-md-12 editTop">
