--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     rel="stylesheet">
 
       <!-- Font Awesome -->
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" rel="stylesheet">
   
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
 
   <!-- CSS Stylesheets -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -107,7 +107,7 @@
 
       <div class="row">
         <div class="col-lg-6 col-md-12">
-          <img class="title-image" src="img/NewImgHeader.png" alt="Natalia.img">
+          <img class="title-image" src="img/novaFoto.png" alt="Natalia.img">
         </div>
 
         <div class="col-lg-6 col-md-12 editTop">
@@ -272,6 +272,7 @@
           <div class="socialMedia">
             <a class="btn btn-md btn-light btn-lg-square rounded-circle me-2 socialButtom" href="https://api.whatsapp.com/send?phone=5521984600412&text=Ol%C3%A1%2C%20vim%20do%20Instagram%20e%20quero%E2%80%A6" target="_blank"><i class="fab fa-whatsapp"></i></a>
             <a class="btn btn-md btn-light btn-lg-square rounded-circle socialButtom" href="https://www.instagram.com/palavrachave_aulas/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a class="btn btn-md btn-light btn-lg-square rounded-circle socialButtom" href="https://youtube.com/@palavrachave_aulas" target="_blank"><i class="fa-brands fa-youtube"></i></a>
         </div>
           
 
