--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           <h1>"Natalia é uma ótima professora, sempre atenciosa e pronta para me ajudar em todas as dúvidas e ensinamentos com o português"</h1>
 
           <img class="testemonial-image"
-            src="https://scontent.fgig18-1.fna.fbcdn.net/v/t1.6435-9/62490384_2449144231796487_6341170937940934656_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=6OI1AZ-GPXIAX_k4_9_&_nc_ht=scontent.fgig18-1.fna&oh=00_AfADnep-fk0vB4EB5VzwAnHxSLHSpR1T91GMmZ7AZ6GmCg&oe=63AA38BF"
+            src="/img/ecyofe.jpg"
             alt="testemonialImg">
           <em>Ecyo Felipe</em>
         </div>
