--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           <h1>"Natalia é uma ótima professora, sempre atenciosa e pronta para me ajudar em todas as dúvidas e ensinamentos com o português"</h1>
 
           <img class="testemonial-image"
-            src="/img/felipefoto.jpg"
+            src="img/ecyofe.jpg"
             alt="testemonialImg">
           <em>Ecyo Felipe</em>
         </div>
