--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <li><p class="blackp">Corretora da redação ENEM de 2013 a
               2015.</p></li>
             <li><p class="blackp">Ampla experiência com anos finais de
-              fund I, fund II e médio</p></li>
+              fund I, fund II e médio.</p></li>
               
               <a href="https://api.whatsapp.com/send?phone=5521984600412&text=Ol%C3%A1%2C%20vim%20do%20Instagram%20e%20quero%E2%80%A6" target="blanket">
                 <button type="button" class="btn btn-dark btn-lg neonButton"><i class="fa-solid fa fa-phone"></i>
