--- a/index.html
+++ b/index.html
@@ -42,11 +42,17 @@
 
 <body>
 
+  
+
 
   <!-- Title -->
 
   <section id="title">
+
+    <a href="https://api.whatsapp.com/send?phone=5521984600412&text=Ol%C3%A1%2C%20vim%20do%20Instagram%20e%20quero%E2%80%A6" class="whatsapp-button-container" target="_blank"><i class="fab fa-whatsapp"></i></a>
     
+    <div class="circle"></div>
+
     <div class="container-fluid">
       <!--Container e container-fluid sao tags do bootstrap para já fazer containers reponsivos! -->
 
