--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <section id="title">
 
-    <a href="https://api.whatsapp.com/send?phone=5521984600412&text=Ol%C3%A1%2C%20vim%20do%20Instagram%20e%20quero%E2%80%A6" class="whatsapp-button-container" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    <a href="https://wa.link/6rpa54" class="whatsapp-button-container" target="_blank"><i class="fab fa-whatsapp"></i></a>
     
     <div class="circle"></div>
 
@@ -120,7 +120,7 @@
 
         <div class="col-lg-6 col-md-12 editTop">
           <h1 class="neonText">Ensinando Português e Redação de modo descomplicado e prazeroso</h1>
-          <a href="https://api.whatsapp.com/send?phone=5521984600412&text=Ol%C3%A1%2C%20vim%20do%20Instagram%20e%20quero%E2%80%A6" target="blanket">
+          <a href="https://wa.link/6rpa54" target="blanket">
           <button type="button" class="btn btn-dark btn-lg neonButton"><i class="fa-solid fa fa-phone"></i>
             Contato</button>
           </a>
@@ -336,7 +336,7 @@
           <h2 class="contactName">Redes Sociais</h2>
           <hr>
           <div class="socialMedia">
-            <a class="btn btn-md btn-light btn-lg-square rounded-circle me-2 socialButtom" href="https://api.whatsapp.com/send?phone=5521984600412&text=Ol%C3%A1%2C%20vim%20do%20Instagram%20e%20quero%E2%80%A6" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <a class="btn btn-md btn-light btn-lg-square rounded-circle me-2 socialButtom" href="https://wa.link/6rpa54" target="_blank"><i class="fab fa-whatsapp"></i></a>
             <a class="btn btn-md btn-light btn-lg-square rounded-circle socialButtom" href="https://www.instagram.com/palavrachave_aulas/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a class="btn btn-md btn-light btn-lg-square rounded-circle socialButtom" href="https://youtube.com/@palavrachave_aulas" target="_blank"><i class="fa-brands fa-square-youtube"></i></a>
         </div>
