--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
       <nav class="navbar navbar-expand-lg navbar-light displayAdjustment">
-        <a class="navbar-brand" href="#"><img class="logoImg" src="img/palavraChaveLogo.png" width="23%" alt=""></a>
+        <a class="navbar-brand" href="#"><img class="logoImg" src="img/palavraChaveLogo.png" width="23%" alt="meuLogo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
