--- a/index.html
+++ b/index.html
@@ -234,12 +234,13 @@
             <h1>Quem é Natalia Granthon?</h1>
             <br>
             <ul>
-            <li><p class="blackp">Natalia é apaixonada por ensinar, ou melhor, por ver que o aluno aprendeu. Nada como aquele "Ahhh, entendi!". Todo esforço e dedicação valem à pena ao ouvir isso.
-            </p></li>
+            <p class="blackp">Natalia é apaixonada por ensinar, ou melhor, por ver que o aluno aprendeu. Nada como aquele "Ahhh, entendi!". Todo esforço e dedicação valem à pena ao ouvir isso.
+            </p>
             <li><p class="blackp">Formada pela Universidade Federal do Rio de Janeiro e Pós-graduada em Educação Digital.</p></li>
             <li><p class="blackp">Vasta experiência em aulas para concurso e escolas.</p></li>
             <li><p class="blackp">Conhecimentos aplicados na correção de redações de concursos e ENEM de 2013 a 2015.
-              - Responsável por transformar a segurança linguística de advogados, juízes, empresários, entre outros profissionais.</p></li>
+            </p></li>
+            <li><p class="blackp">Responsável por transformar a segurança linguística de advogados, juízes, empresários, entre outros profissionais.</p></li>
               
               
             </ul>
