--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <a class="nav-item nav-link" href="#services">Serviços</a>
             <a class="nav-item nav-link" href="#aboutMe">Sobre a Professora</a>
             <a class="nav-item nav-link" href="#contact">Contato</a>
-            <a class="nav-item nav-link" href="./Login/index.html">Materiais</a>
+            <a class="nav-item nav-link" href="./indexGames.html">Materiais</a>
           </div>
 
           
