--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <a class="nav-item nav-link" href="#services">Serviços</a>
             <a class="nav-item nav-link" href="#aboutMe">Sobre a Professora</a>
             <a class="nav-item nav-link" href="#contact">Contato</a>
-            <a class="nav-item nav-link" href="./indexGames.html">Materiais</a>
+            <a class="nav-item nav-link" href="./materiais.html">Materiais</a>
           </div>
 
           
@@ -277,7 +277,7 @@
           <img class="testemonial-image"
             src="img/ecyofe.jpg"
             alt="testemonialImg">
-          <em>Ecyo Felipe</em>
+          <em>Felipe Araujo</em>
         </div>
 
         <div class="carousel-item active">
