--- a/materiais.html
+++ b/materiais.html
@@ -116,22 +116,22 @@
 
             </div>
 
-            <div class="container-fluid">
-                <h1>Veja por que nossos jogos são uma ferramenta indispensável para professores apaixonados por um
-                    ensino eficaz.</h1>
-                <h1>1 - Engajamento e motivação:</h1>
-                <p>Os alunos se sentem mais motivados a aprender quando estão envolvidos em atividades interativas e
-                    desafiadoras, despertando o interesse dos alunos e aumentando sua motivação intrínseca para
-                    progredir no aprendizado do português.</p>
-                <h1>2 - Desenvolvimento de habilidades linguísticas:</h1>
-                <p>Nossos jogos são cuidadosamente projetados para ajudar no desenvolvimento das habilidades
-                    linguísticas dos alunos. Eles abrangem aspectos fundamentais, como gramática e ortografia.</p>
-                <h1>3 - Personalização e adaptação:</h1>
-                <p>Os jogos de português oferecem uma grande flexibilidade, permitindo que os professores personalizem a
-                    experiência de aprendizado para atender às necessidades individuais dos alunos ou da turma.</p>
-
-
+            <div class="texts container-fluid">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h1>Veja por que nossos jogos são uma ferramenta indispensável para professores apaixonados por um ensino eficaz.</h1>
+                            <h2>1 - Engajamento e motivação:</h2>
+                            <p>Os alunos se sentem mais motivados a aprender quando estão envolvidos em atividades interativas e desafiadoras, despertando o interesse dos alunos e aumentando sua motivação intrínseca para progredir no aprendizado do português.</p>
+                            <h2>2 - Desenvolvimento de habilidades linguísticas:</h2>
+                            <p>Nossos jogos são cuidadosamente projetados para ajudar no desenvolvimento das habilidades linguísticas dos alunos. Eles abrangem aspectos fundamentais, como gramática e ortografia.</p>
+                            <h2>3 - Personalização e adaptação:</h2>
+                            <p>Os jogos de português oferecem uma grande flexibilidade, permitindo que os professores personalizem a experiência de aprendizado para atender às necessidades individuais dos alunos ou da turma.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
+            
 
             <div class="imageGames container-fluid">
                 <img src="img/fotoJogos1.jpg" alt="fotojogo1">
