--- a/materiais.html
+++ b/materiais.html
@@ -116,16 +116,16 @@
 
             </div>
 
-            <div class="texts container-fluid">
+            <div class="container-fluid">
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <h1>Veja por que nossos jogos são uma ferramenta indispensável para professores apaixonados por um ensino eficaz.</h1>
-                            <h2>1 - Engajamento e motivação:</h2>
+                            <h2>Veja por que nossos jogos são uma ferramenta indispensável para professores apaixonados por um ensino eficaz.</h2>
+                            <h3>1 - Engajamento e motivação:</h3>
                             <p>Os alunos se sentem mais motivados a aprender quando estão envolvidos em atividades interativas e desafiadoras, despertando o interesse dos alunos e aumentando sua motivação intrínseca para progredir no aprendizado do português.</p>
-                            <h2>2 - Desenvolvimento de habilidades linguísticas:</h2>
+                            <h3>2 - Desenvolvimento de habilidades linguísticas:</h3>
                             <p>Nossos jogos são cuidadosamente projetados para ajudar no desenvolvimento das habilidades linguísticas dos alunos. Eles abrangem aspectos fundamentais, como gramática e ortografia.</p>
-                            <h2>3 - Personalização e adaptação:</h2>
+                            <h3>3 - Personalização e adaptação:</h3>
                             <p>Os jogos de português oferecem uma grande flexibilidade, permitindo que os professores personalizem a experiência de aprendizado para atender às necessidades individuais dos alunos ou da turma.</p>
                         </div>
                     </div>
@@ -165,7 +165,7 @@
                 </div>
                 
 
-                <h1>Prepare-se para uma nova era de aprendizagem prazerosa e resultados impactantes!</h1>
+                <h2>Prepare-se para uma nova era de aprendizagem prazerosa e resultados impactantes!</h2>
                 <p class="pDestaque">Adquira <a href="https://go.hotmart.com/U82791305W?dp=1" target="_blank" class="link-destaque">AQUI</a> o seu kit</p>
                 <br>
                 <P class="pDestaque">Caso tenha adquirido seu kit de jogos, <a href="./login.html" target="_blank" class="link-destaque">ACESSE AQUI</a></p>
