--- a/materiais.html
+++ b/materiais.html
@@ -63,9 +63,10 @@ https://templatemo.com/tm-569-edu-meeting
 
   <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
-      <video autoplay muted loop id="bg-video">
-          <source src="assets/images/projetoPalavraChave_video.mp4" type="video/mp4" />
-      </video>
+    <div id="bg-video" class="teste1">
+      <img src="" alt="">
+        <!-- <source src="assets/images/palavraChaveVideoSiteMain.mp4" type="video/mp4" /> -->
+    </div>
 
       <div class="video-overlay header-text">
           <div class="container">
