--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                         <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-                        <li><a href="#services">Serviços</a></li>
-                        <li><a href="#aboutMe">Sobre</a></li>
+                        <li class="scroll-to-section"><a href="#services">Serviços</a></li>
+                        <li class="scroll-to-section"><a href="#aboutMe">Sobre</a></li>
                         <li class="scroll-to-section"><a href="#contact">Contato</a></li>
                         <li><a href="./materiais.html" target="_blank">Materiais</a></li>
                          
