--- a/jogos.html
+++ b/jogos.html
@@ -42,17 +42,18 @@
 
 <body>
 
-
+  <a href="https://api.whatsapp.com/send?phone=5521984600412&text=Ol%C3%A1!%20Vim%20do%20seu%20site%20e%20quero%E2%80%A6" target="_blank" class="whatsapp-button">
+    <i class="fab fa-whatsapp"></i>
+  </a>
 
 
   <!-- Title -->
 
   <section id="title">
 
-    <a href="https://wa.link/6rpa54" class="whatsapp-button-container" target="_blank"><i
-        class="fab fa-whatsapp"></i></a>
+    
 
-    <div class="circle"></div>
+    
 
     <div class="container-fluid">
       <!--Container e container-fluid sao tags do bootstrap para já fazer containers reponsivos! -->
@@ -71,9 +72,9 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
             <!--  ms-auto serve para os conteudos da NAVBAR irem para a direta -->
-
-            <a class="nav-item nav-link" href="#contact">Contato</a>
-            <a class="nav-item nav-link" href="./index.html">Sair</a>
+            <a class="nav-item nav-link" href="./index.html">HOME</a>
+            <a class="nav-item nav-link" href="#contact">CONTATO</a>
+            <a class="nav-item nav-link" href="./index.html">SAIR</a>
           </div>
 
 
@@ -96,9 +97,7 @@
       <div><iframe style="max-width:100%"
           src="https://wordwall.net/pt/embed/a2c5d65b1b1d40a48143051440439dac?themeId=46&templateId=36&fontStackId=0"
           width="500" height="380" frameborder="0" allowfullscreen></iframe>
-        <iframe style="max-width:100%"
-          src="https://wordwall.net/pt/embed/8dfcc469ca574a1e80cc34913f706405?themeId=22&templateId=45&fontStackId=0"
-          width="500" height="380" frameborder="0" allowfullscreen></iframe>
+          <iframe style="max-width:100%" src="https://wordwall.net/pt/embed/5bf06c989a424fc2a35b833a1aeb861c?themeId=22&templateId=45&fontStackId=0" width="500" height="380" frameborder="0" allowfullscreen></iframe>
       </div>
       <div><iframe style="max-width:100%"
           src="https://wordwall.net/pt/embed/9540168266744087ae74587c13259880?themeId=21&templateId=69&fontStackId=0"
