--- a/index.html
+++ b/index.html
@@ -173,24 +173,28 @@
 
     <div class="row">
 
-      <div class="feature-box col-lg-4">
+      <div class="feature-box col-lg-6">
         <i class="icon fa-sharp fa fa-solid fa-book fa-4x"></i>
         <h3 class="feature-title">Acompanhamento escolar</h3><br>
-        <p>Seguimos o currículo de Português da escola, complementando com explicações, exercícios e jogos, 1 aula
-          semanal, individual</p>
+        <p>Programa personalizado de Português que segue o currículo da escola, proporcionando uma abordagem complementar enriquecedora a partir de explicações claras, exercícios práticos relevantes e até mesmo jogos interativos.</p>
       </div>
 
-      <div class="feature-box col-lg-4">
-        <i class="icon fas fa-4x fa-solid fa-pen"></i>
-        <h3 class="feature-title">Curso de interpretação de texto</h3><br>
-        <p>Turmas com até 10 alunos, interpretação de diversos gêneros textuais, aprimoramento de vocabulário, 1 aula
-          semanal. (Consulte horários das turmas)</p>
-      </div>
-
-      <div class="feature-box col-lg-4">
+      <div class="feature-box col-lg-6">
         <i class="icon fa-solid fa fa-eraser fa-4x"></i>
         <h3 class="feature-title">Curso de Redação modelo ENEM</h3><br>
         <p>Turmas com até 10 alunos, 1 aula semanal, 2 redações corrigidas por mês. (Consulte horários das turmas)</p>
+      </div>
+
+      <div class="feature-box col-lg-6">
+        <i class="icon fa-solid fa-chalkboard-user fa-4x"></i>
+        <h3 class="feature-title">MENTORIA PARA PROFESSORES</h3><br>
+        <p>Mentoria personalizada a professores de português, auxiliando-os no planejamento de aulas, criação de materiais e adoção de metodologias eficazes. Trabalho em colaboração para aprimorar suas habilidades e técnicas de ensino, promovendo o desenvolvimento profissional.</p>
+      </div>
+
+      <div class="feature-box col-lg-6">
+        <i class="icon fa-solid fa-person-chalkboard fa-4x"></i>
+        <h3 class="feature-title">AULAS PARA ESTRANGEIROS</h3><br>
+        <p>Mentoria personalizada a professores de português, auxiliando-os no pficazes. Trabalhoensino, promovendo o desenvolvimento profissional.</p>
       </div>
     </div>
   </div>
