--- a/materiais.html
+++ b/materiais.html
@@ -9,13 +9,20 @@
     <meta name="author" content="TemplateMo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
+    <script src="./script.js" defer></script>
+
     <title>Palavra Chave Aulas</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Inclua a biblioteca do Bootstrap -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.5.0/js/bootstrap.bundle.min.js"></script>
+
+
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" rel="stylesheet">
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
@@ -47,15 +54,15 @@ https://templatemo.com/tm-569-edu-meeting
               <div class="col-12">
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
-                      <a href="index.html" class="logo">
+                      <a href="./index.html" class="logo">
                           <img src="./assets/images/palavraChaveLogo.png" alt="PalavraChaveLogo">
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
-                          <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-                          <li><a href="./login.html">Login</a></li> 
-                      </ul>        
+                        <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
+                        <li><a href="./login.html" target="_blank">Login</a></li> 
+                    </ul>        
                       <a class='menu-trigger'>
                           <span>Menu</span>
                       </a>
@@ -142,7 +149,8 @@ https://templatemo.com/tm-569-edu-meeting
       <div class="row">
         <div class="col-lg-12">
           <div class="section-heading">
-            <h2>Assista ao vídeo para conhecer nossos jogos físicos e digitais.</h2>
+            <h2></h2>
+            <h2 style="border-bottom: none;">Assista ao vídeo para conhecer nossos jogos físicos e digitais.</h2>
             <div class="col-lg-12">
               <div class="video editVideo">
                 <iframe width="900" height="450" src="https://www.youtube.com/embed/fYw4UXQ9rCQ" frameborder="0"
@@ -170,13 +178,14 @@ https://templatemo.com/tm-569-edu-meeting
               <li>9- Sujeito e predicado (jogo da velha)</li>
               <li>10- Classes de palavras (bingo)</li>
             </ul>
-            <div class="main-
-            -red">
+            <div class="main-button-red">
               <a href="https://go.hotmart.com/U82791305W?dp=1" target="_blank">Adquira já!</a>
             </div>
           </div>
         </div>
-        <div class="col-lg-8">
+
+        
+        <div id="meuCarrossel" class="col-lg-8">
           <div class="row">
             <div class="col-lg-6">
               <div class="meeting-item">
