--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/lightbox.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styleGame.css">
 
 </head>
 
@@ -173,28 +174,22 @@
 
     <div class="row">
 
-      <div class="feature-box col-lg-6">
+      <div class="feature-box col-lg-4">
         <i class="icon fa-sharp fa fa-solid fa-book fa-4x"></i>
         <h3 class="feature-title">Acompanhamento escolar</h3><br>
-        <p>Programa personalizado de Português que segue o currículo da escola, proporcionando uma abordagem complementar enriquecedora a partir de explicações claras, exercícios práticos relevantes e até mesmo jogos interativos.</p>
+        <p>Programa personalizado de Português que segue o currículo da escola, proporcionando uma abordagem complementar enriquecedora a partir de explicações claras, exercícios práticos relevantes e até mesmo jogos interativos.</p>
       </div>
 
-      <div class="feature-box col-lg-6">
-        <i class="icon fa-solid fa fa-eraser fa-4x"></i>
-        <h3 class="feature-title">Curso de Redação modelo ENEM</h3><br>
-        <p>Turmas com até 10 alunos, 1 aula semanal, 2 redações corrigidas por mês. (Consulte horários das turmas)</p>
-      </div>
-
-      <div class="feature-box col-lg-6">
+    <div class="feature-box col-lg-4">
         <i class="icon fa-solid fa-chalkboard-user fa-4x"></i>
-        <h3 class="feature-title">MENTORIA PARA PROFESSORES</h3><br>
-        <p>Mentoria personalizada a professores de português, auxiliando-os no planejamento de aulas, criação de materiais e adoção de metodologias eficazes. Trabalho em colaboração para aprimorar suas habilidades e técnicas de ensino, promovendo o desenvolvimento profissional.</p>
+        <h3 class="feature-title">Mentoria para Professores</h3><br>
+        <p>Mentoria personalizada a professores de português, auxiliando-os no planejamento de aulas, criação de materiais e adoção de metodologias eficazes. Trabalho em colaboração para aprimorar suas habilidades e técnicas de ensino, promovendo o desenvolvimento profissional.</p>
       </div>
 
-      <div class="feature-box col-lg-6">
+      <div class="feature-box col-lg-4">
         <i class="icon fa-solid fa-person-chalkboard fa-4x"></i>
-        <h3 class="feature-title">AULAS PARA ESTRANGEIROS</h3><br>
-        <p>Mentoria personalizada a professores de português, auxiliando-os no pficazes. Trabalhoensino, promovendo o desenvolvimento profissional.</p>
+        <h3 class="feature-title">Aulas para Estrangeiros</h3><br>
+        <p>Aulas personalizadas de português para estrangeiros, proporcionando uma experiência de aprendizagem envolvente e eficaz. O objetivo é ajudar os alunos a desenvolverem habilidades sólidas na língua portuguesa, desde a compreensão oral e escrita até a expressão verbal fluente.</p>
       </div>
     </div>
   </div>
@@ -317,8 +312,8 @@
           <hr>
           
           <p>Acompanhamento escolar</p>
-          <p>Curso de interpretação de texto</p>
-          <p>Curso de Redação modelo ENEM</p>
+          <p>Mentoria para professores</p>
+          <p>Aulas para estrangeiros</p>
           
         </div>
 
