--- a/jogos.html
+++ b/jogos.html
@@ -97,8 +97,7 @@
       <div><iframe style="max-width:100%"
           src="https://wordwall.net/pt/embed/a2c5d65b1b1d40a48143051440439dac?themeId=46&templateId=36&fontStackId=0"
           width="500" height="380" frameborder="0" allowfullscreen></iframe>
-          <iframe style="max-width:100%" src="https://wordwall.net/pt/embed/7fafdbacf7cd4c81b94326ed87304ba8?themeId=22&templateId=45&fontStackId=0"
-          width="500" height="380" frameborder="0" allowfullscreen></iframe>
+          <iframe style="max-width:100%" src="https://wordwall.net/pt/embed/2043652518534fbbbcb02ba2e400b92b?themeId=42&templateId=70&fontStackId=0" width="500" height="380" frameborder="0" allowfullscreen></iframe>
       </div>
       <div><iframe style="max-width:100%"
           src="https://wordwall.net/pt/embed/9540168266744087ae74587c13259880?themeId=21&templateId=69&fontStackId=0"
