--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <div class="row">
 
         <div class="col-lg-6 fotoRedonda">
-          <img src="img/fotoRedonda.png" class="imgAbt" alt="">
+          <img src="img/fotoRedonda.png" alt="quemSouEu">
         </div>
         <div class="col-lg-6">
           <div class="curriculo">
