--- a/jogos.html
+++ b/jogos.html
@@ -134,8 +134,8 @@
           <hr>
 
           <p>Acompanhamento escolar</p>
-          <p>Curso de interpretação de texto</p>
-          <p>Curso de Redação modelo ENEM</p>
+          <p>Mentoria para professores</p>
+          <p>Aulas para estrangeiros</p>
 
         </div>
         <div class="col-lg-4">
