--- a/materiais.html
+++ b/materiais.html
@@ -60,7 +60,7 @@ https://templatemo.com/tm-569-edu-meeting
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
-                        <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
+                        <li class="scroll-to-section"><a href="./index.html" class="active">Home</a></li>
                         <li><a href="./login.html" target="_blank">Login</a></li> 
                     </ul>        
                       <a class='menu-trigger'>
