--- a/materiais.html
+++ b/materiais.html
@@ -162,7 +162,7 @@ https://templatemo.com/tm-569-edu-meeting
           </div>
         </div>
         <div class="colunaGeral">
-          <h2 style="color: white">KIT 1</h2>
+          <h2 style="color: white; font-weight: 700;">KIT 1</h2><br>
         <div class="coluna1">
           
          <div class="col-lg-6">
@@ -280,7 +280,8 @@ https://templatemo.com/tm-569-edu-meeting
         </div> -->
         </div>
       </div>
-      <h2 style="color: white">KIT 2</h2>
+      <br>
+      <h2 style="color: white; font-weight: 700;">KIT 2</h2><br>
       <div class="coluna2">
         <div class="col-lg-6">
           <div class="categories">
