--- a/materiais.html
+++ b/materiais.html
@@ -66,7 +66,7 @@ https://templatemo.com/tm-569-edu-meeting
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html"><img src="iMG/palavraChaveLogo.png" alt="Meu Logo"></a></h1>
+      <h1 class="logo"><a href="index.html"><img src="img/palavraChaveLogo.png" alt="Meu Logo"></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
