--- a/jogos.html
+++ b/jogos.html
@@ -72,9 +72,9 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
             <!--  ms-auto serve para os conteudos da NAVBAR irem para a direta -->
-            <a class="nav-item nav-link" href="./index.html">HOME</a>
-            <a class="nav-item nav-link" href="#contact">CONTATO</a>
-            <a class="nav-item nav-link" href="./index.html">SAIR</a>
+            <a style="font-size: 14px;" class="nav-item nav-link" href="./index.html">Home</a>
+            <a style="font-size: 14px;" class="nav-item nav-link" href="#contact">Contato</a>
+            <a style="font-size: 14px;" class="nav-item nav-link" href="./index.html">Sair</a>
           </div>
 
 
