--- a/materiais.html
+++ b/materiais.html
@@ -208,7 +208,7 @@ https://templatemo.com/tm-569-edu-meeting
               <br>
               <li>2- Funções sintáticas (digital- combinação)</li><br>
               <li>3- Preposição (digital- lacuna de nuvem)</li><br>
-              <li>4- Advérbio (baralho de advérbio)</li><br>
+              <li>4- Advérbio (digital- baralho de advérbio)</li><br>
               <li>5- Concordância verbal e nominal (digital - quiz show)</li><br>
               <li>6- Substantivo (jogo da memória)</li><br>
               <li>7- Artigos e numerais (caça-palavras)</li><br>
