--- a/materiais.html
+++ b/materiais.html
@@ -70,13 +70,14 @@ https://templatemo.com/tm-569-edu-meeting
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav id="navbar" class="navbar">
+      <nav id="navbar" class="myNav">
         <ul>
-          <li><a class="nav-link scrollto active" href="./index.html">Home</a></li>
-          <li><a href="./login.html" target="_blank">Login</a></li>
+          <li><a href="./index.html" target="_blank">Home</a></li>
+          <li><a class="nav-link scrollto active" href="./login.html">Login</a></li>
+          
           
         </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
+        <!-- <i class="bi bi-list mobile-nav-toggle"></i> -->
       </nav><!-- .navbar -->
 
     </div>
