--- a/index.html
+++ b/index.html
@@ -391,6 +391,7 @@
 <!-- javascript file -->
 
 <script src="main.js"></script>
+<script src="./script.js" defer></script>
 
 <script>
     //according to loftblog tut
