--- a/materiais.html
+++ b/materiais.html
@@ -71,8 +71,7 @@ https://templatemo.com/tm-569-edu-meeting
     <i class="fab fa-whatsapp"></i>
   </a>
 
-  <a href="https://www.instagram.com/palavrachave_aulas/"
-    target="_blank" class="instagram-button">
+  <a href="https://www.instagram.com/palavrachave_aulas/" target="_blank" class="instagram-button">
     <i class="fa-brands fa-instagram"></i>
   </a>
   <!-- Sub Header -->
@@ -461,17 +460,20 @@ https://templatemo.com/tm-569-edu-meeting
             </div>
 
           </div><br>
-          <h2 class="kitExclusivos">JOGOS EXCLUSIVOS</h2>
+          <h2 class="kitExclusivos">JOGOS EXCLUSIVOS</h2><br>
+          <h5 style="color: white;">Clique nos jogos para adquirir</h5>
           <div class="myCards">
             <div class="card" style="width: 20rem;">
 
               <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="card-img-top" src="images/oracoesSubordinadas.jpg" alt="Card image cap">
+
+                    <a href="https://go.hotmart.com/V83420946U" target="_blank"><img class="card-img-top"
+                        src="images/oracoesSubordinadas.jpg" alt="Card image cap"> </a>
                   </div>
                   <div class="carousel-item">
-                    <img class="card-img-top" src="images/oracoesSubornidades2.jpg" alt="Card image cap">
+                   <a  href="https://go.hotmart.com/V83420946U" target="_blank"><img class="card-img-top" src="images/oracoesSubornidades2.jpg" alt="Card image cap"></a>
                   </div>
 
 
@@ -491,10 +493,10 @@ https://templatemo.com/tm-569-edu-meeting
               <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="card-img-top" src="images/adverbioTonicidadeEncontros.jpg" alt="Card image cap">
+                    <a href="https://go.hotmart.com/I83425062B" target="_blank"><img class="card-img-top" src="images/adverbioTonicidadeEncontros.jpg" alt="Card image cap"></a>
                   </div>
                   <div class="carousel-item">
-                    <img class="card-img-top" src="images/adverbioTonicidadeEncontros1.jpg" alt="Card image cap">
+                    <a href="https://go.hotmart.com/I83425062B" target="_blank"><img class="card-img-top" src="images/adverbioTonicidadeEncontros1.jpg" alt="Card image cap"></a>
                   </div>
 
 
@@ -514,10 +516,10 @@ https://templatemo.com/tm-569-edu-meeting
               <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="card-img-top" src="images/figurasDeLinguagem.jpg" alt="Card image cap">
+                    <a href="https://go.hotmart.com/P83421084T" target="_blank"><img class="card-img-top" src="images/figurasDeLinguagem.jpg" alt="Card image cap"></a>
                   </div>
                   <div class="carousel-item">
-                    <img class="card-img-top" src="images/figurasDeLinguagem1.jpg" alt="Card image cap">
+                    <a href="https://go.hotmart.com/P83421084T" target="_blank"><img class="card-img-top" src="images/figurasDeLinguagem1.jpg" alt="Card image cap"></a>
                   </div>
 
 
@@ -537,10 +539,10 @@ https://templatemo.com/tm-569-edu-meeting
               <div id="carouselExampleControls3" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="card-img-top" src="images/generosTextuais.jpg" alt="Card image cap">
+                    <a href="https://go.hotmart.com/C83421244X" target="_blank"><img class="card-img-top" src="images/generosTextuais.jpg" alt="Card image cap"></a>
                   </div>
                   <div class="carousel-item">
-                    <img class="card-img-top" src="images/generosTextuais1.jpg" alt="Card image cap">
+                    <a href="https://go.hotmart.com/C83421244X" target="_blank"><img class="card-img-top" src="images/generosTextuais1.jpg" alt="Card image cap"></a>
                   </div>
 
 
@@ -561,10 +563,10 @@ https://templatemo.com/tm-569-edu-meeting
               <div id="carouselExampleControls4" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="card-img-top" src="images/indicativoSubjuntivo.jpg" alt="Card image cap">
+                    <a href="https://go.hotmart.com/D83420735U" target="_blank"><img class="card-img-top" src="images/indicativoSubjuntivo.jpg" alt="Card image cap"></a>
                   </div>
                   <div class="carousel-item">
-                    <img class="card-img-top" src="images/indicativoSubjuntivo1.jpg" alt="Card image cap">
+                    <a href="https://go.hotmart.com/D83420735U" target="_blank"><img class="card-img-top" src="images/indicativoSubjuntivo1.jpg" alt="Card image cap"></a>
                   </div>
 
 
@@ -580,7 +582,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
             </div>
 
-            <div class="card" style="width: 20rem;">
+            <!-- <div class="card" style="width: 20rem;">
 
               <div id="carouselExampleControls5" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
@@ -602,7 +604,7 @@ https://templatemo.com/tm-569-edu-meeting
                   <span class="sr-only">Next</span>
                 </a>
               </div>
-            </div>
+            </div> -->
 
 
           </div>
