--- a/materiais.html
+++ b/materiais.html
@@ -461,7 +461,7 @@ https://templatemo.com/tm-569-edu-meeting
 
           </div><br>
           <h2 class="kitExclusivos">JOGOS EXCLUSIVOS</h2><br>
-          <h5 style="color: white;">Clique nos jogos para adquirir</h5>
+          <h5 style="color: white;">Clique nos jogos para adquirir.</h5>
           <div class="myCards">
             <div class="card" style="width: 20rem;">
 
