botao clique aqui na pagina materiais

--- a/materiais.html
+++ b/materiais.html
@@ -461,7 +461,7 @@ https://templatemo.com/tm-569-edu-meeting
 
           </div><br>
           <h2 class="kitExclusivos">JOGOS EXCLUSIVOS</h2><br>
-          <h5 style="color: white;">Clique nos jogos para adquirir.</h5>
+          <h5 style="color: white;"><a style="color: red;" href="http://loja.palavrachaveaulas.com" target="_blank"><strong>CLIQUE AQUI</strong></a> E ACESSE NOSSA LOJA</h5>
           <div class="myCards">
             <div class="card" style="width: 20rem;">
 
@@ -469,11 +469,11 @@ https://templatemo.com/tm-569-edu-meeting
                 <div class="carousel-inner">
                   <div class="carousel-item active">
 
-                    <a href="https://go.hotmart.com/V83420946U" target="_blank"><img class="card-img-top"
+                    <a><img class="card-img-top"
                         src="images/oracoesSubordinadas.jpg" alt="Card image cap"> </a>
                   </div>
                   <div class="carousel-item">
-                   <a  href="https://go.hotmart.com/V83420946U" target="_blank"><img class="card-img-top" src="images/oracoesSubornidades2.jpg" alt="Card image cap"></a>
+                   <a><img class="card-img-top" src="images/oracoesSubornidades2.jpg" alt="Card image cap"></a>
                   </div>
 
 
@@ -493,10 +493,10 @@ https://templatemo.com/tm-569-edu-meeting
               <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <a href="https://go.hotmart.com/I83425062B" target="_blank"><img class="card-img-top" src="images/adverbioTonicidadeEncontros.jpg" alt="Card image cap"></a>
+                    <a><img class="card-img-top" src="images/adverbioTonicidadeEncontros.jpg" alt="Card image cap"></a>
                   </div>
                   <div class="carousel-item">
-                    <a href="https://go.hotmart.com/I83425062B" target="_blank"><img class="card-img-top" src="images/adverbioTonicidadeEncontros1.jpg" alt="Card image cap"></a>
+                    <a><img class="card-img-top" src="images/adverbioTonicidadeEncontros1.jpg" alt="Card image cap"></a>
                   </div>
 
 
@@ -516,10 +516,10 @@ https://templatemo.com/tm-569-edu-meeting
               <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <a href="https://go.hotmart.com/P83421084T" target="_blank"><img class="card-img-top" src="images/figurasDeLinguagem.jpg" alt="Card image cap"></a>
+                    <a><img class="card-img-top" src="images/figurasDeLinguagem.jpg" alt="Card image cap"></a>
                   </div>
                   <div class="carousel-item">
-                    <a href="https://go.hotmart.com/P83421084T" target="_blank"><img class="card-img-top" src="images/figurasDeLinguagem1.jpg" alt="Card image cap"></a>
+                    <a><img class="card-img-top" src="images/figurasDeLinguagem1.jpg" alt="Card image cap"></a>
                   </div>
 
 
@@ -539,10 +539,10 @@ https://templatemo.com/tm-569-edu-meeting
               <div id="carouselExampleControls3" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <a href="https://go.hotmart.com/C83421244X" target="_blank"><img class="card-img-top" src="images/generosTextuais.jpg" alt="Card image cap"></a>
+                    <a><img class="card-img-top" src="images/generosTextuais.jpg" alt="Card image cap"></a>
                   </div>
                   <div class="carousel-item">
-                    <a href="https://go.hotmart.com/C83421244X" target="_blank"><img class="card-img-top" src="images/generosTextuais1.jpg" alt="Card image cap"></a>
+                    <a><img class="card-img-top" src="images/generosTextuais1.jpg" alt="Card image cap"></a>
                   </div>
 
 
@@ -563,10 +563,10 @@ https://templatemo.com/tm-569-edu-meeting
               <div id="carouselExampleControls4" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <a href="https://go.hotmart.com/D83420735U" target="_blank"><img class="card-img-top" src="images/indicativoSubjuntivo.jpg" alt="Card image cap"></a>
+                    <a><img class="card-img-top" src="images/indicativoSubjuntivo.jpg" alt="Card image cap"></a>
                   </div>
                   <div class="carousel-item">
-                    <a href="https://go.hotmart.com/D83420735U" target="_blank"><img class="card-img-top" src="images/indicativoSubjuntivo1.jpg" alt="Card image cap"></a>
+                    <a><img class="card-img-top" src="images/indicativoSubjuntivo1.jpg" alt="Card image cap"></a>
                   </div>
 
 
