--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
           <li><a class="nav-link scrollto" href="#services">Serviços</a></li>
           <li><a class="nav-link scrollto" href="#aboutMe">Sobre</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contato</a></li>
-          <li><a href="./materiais.html">Materiais</a></li>
+          <li><a href="./materiais.html" target="_blank">Materiais</a></li>
+          <li><a href="http://loja.palavrachaveaulas.com" target="_blank">Loja</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
